--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Mini World Clock",
-  "version": "0.0.2",
-  "description": "Mini clock for some time zone I need quick info on",
+  "version": "0.0.3",
+  "description": "Mini clock for time zones I need quick info on",
   "action": {
     "default_popup": "index.html",
     "default_icon": {
